metadata-classic/objects/HCConfigResource__c.object
<CustomObject>
    <fields>
        <fullName>AvailableForHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Badge__c</fullName>
        <description>Text area to store the text used for a clarifier message in the upper right hand corner of the resource card.</description>
        <inlineHelpText>Text area to store the text used for a clarifier message in the upper right hand corner of the resource card.</inlineHelpText>
        <label>Badge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <description>Text field to store the code of the icon used on the help center resource card.</description>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkText__c</fullName>
        <description>The callout text that shows up in blue on the resource tile.</description>
        <inlineHelpText>The callout text that shows up in blue on the resource tile.</inlineHelpText>
        <label>Link Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The publication status of the help center resource (e.g., video library, suggestion box)</description>
        <inlineHelpText>Draft: resource card is being built out 
Needs approval: resource card needs final approval before making it visible to site visitors 
Publish: resource is made available for use on the public help center 
Archive: resource card is no longer visible</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs approval</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Long text area to store the summary / instructional text for the resource card.</description>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the resource tile on the help center</description>
        <inlineHelpText>The title of the resource tile on the help center.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <inlineHelpText>URL navigated to when the resource card is clicked.  Internal URLs should be like &quot;/videos&quot; and external links should be full URLs with domain like &quot;https://www.thumbtak.com/blah/blah&quot;</inlineHelpText>
        <label>URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Open text field to store the version history of the record.</description>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HC Config: Resource</label>
    <listViews>
        <fullName>AllResources</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Title__c</columns>
        <columns>Icon__c</columns>
        <columns>Summary__c</columns>
        <columns>URL__c</columns>
        <columns>LinkText__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>AvailableForHeader__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigResource__c.ResourceCard</value>
        </filters>
        <label>01: All Resources</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Archived</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Badge__c</columns>
        <columns>Summary__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigResource__c.ResourceCard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Archived</value>
        </filters>
        <label>03: Archived</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Drafts</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Badge__c</columns>
        <columns>Summary__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigResource__c.ResourceCard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft,Needs approval</value>
        </filters>
        <label>01: Drafts</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Published</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Status__c</columns>
        <columns>Badge__c</columns>
        <columns>Summary__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>HCConfigResource__c.ResourceCard</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Published</value>
        </filters>
        <label>02: Published</label>
        <sharedTo>
            <group>ContentUser</group>
            <role>SystemLevelAccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <recordTypes>
        <fullName>ResourceCard</fullName>
        <active>true</active>
        <description>Record type used to manage help center more resources cards.</description>
        <label>Resource Card</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>